yaml/elk/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk
  labels:
    name: elk
    app: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elk
  template:
    metadata:
      labels:
        app: elk
    spec:
      containers:
        - name: elasticsearch
          image: registry.shpaq.org/elasticsearch:v7.9.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/jvm.options
              subPath: jvm.options
            - name: elasticsearch-vol01
              mountPath: /usr/share/elasticsearch/data
          workingDir: /usr/share/elasticsearch/data
          ports:
            - containerPort: 9200
              protocol: TCP
              name: elasticsearch
            - containerPort: 9300
              protocol: TCP
          resources:
            limits:
              cpu: 1
              memory: 368Mi
            requests:
              cpu: 0.1
              memory: 256Mi
        - name: logstash
          image: registry.shpaq.org/logstash:v7.9.3
          imagePullPolicy: Always
          ports:
            - containerPort: 5044
              protocol: TCP
              name: filebeat-pihole
            - containerPort: 5045
              protocol: TCP
              name: filebeat-sshd
            - containerPort: 9600
              protocol: TCP
              name: logstash
          resources:
            limits:
              cpu: 1
              memory: 368Mi
            requests:
              cpu: 0.25
              memory: 256Mi
          volumeMounts:
            - name: logstash-config
              mountPath: /etc/logstash/logstash.yml
              subPath: logstash.yml
            - name: logstash-config
              mountPath: /etc/logstash/pipelines.yml
              subPath: pipelines.yml
            - name: logstash-config
              mountPath: /etc/logstash/jvm.options
              subPath: jvm.options
            - name: logstash-config
              mountPath: /etc/logstash/log4j2.properties
              subPath: log4j2.properties
            - name: logstash-config
              mountPath: /etc/logstash/conf.d/10-pihole.conf
              subPath: 10-pihole.conf
            - name: logstash-config
              mountPath: /etc/logstash/conf.d/20-sshd.conf
              subPath: 20-sshd.conf
            - name: logstash-config
              mountPath: /etc/logstash/patterns/dns
              subPath: dns
        - name: kibana
          image: registry.shpaq.org/kibana:v7.9.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5601
              protocol: TCP
              name: kibana
          resources:
            limits:
              cpu: 1
              memory: 368Mi
            requests:
              cpu: 0.25
              memory: 256Mi
          volumeMounts:
            - name: kibana-config
              mountPath: /usr/share/kibana/config
      terminationGracePeriodSeconds: 30
      volumes:
      - name: elasticsearch-vol01
        persistentVolumeClaim:
          claimName: elk-data
      - name: kibana-config
        configMap:
          name: kibana-config
      - name: elasticsearch-config
        configMap:
          name: elasticsearch-config
      - name: logstash-config
        configMap:
          name: logstash-config
      nodeSelector:
        kubernetes.io/role: worker
        kubernetes.io/os: linux
