yaml/elk/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
spec:
  ingressClassName: traefik-lb
  rules:
  - host: kibana.shpaq.org
    http:
      paths:
      - backend:
          service:
            name: elk-svc-kibana
            port:
              number: 5601
        path: /
        pathType: Prefix
#  tls:
#  - secretName: kibana-shpaq-org-tls
#    hosts:
#      - kibana.shpaq.org
